<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/zerodp"
    android:paddingLeft="@dimen/zerodp"
    android:paddingRight="@dimen/zerodp"
    android:paddingTop="@dimen/zerodp">

	<Button
	    android:id="@+id/getMoreButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="98dp"
	    android:text="@string/button_more" />

	<Button
	    android:id="@+id/memoButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/getMoreButton"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="58dp"
	    android:text="@string/button_memory" />

	<Button
	    android:id="@+id/learingButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/memoButton"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="32dp"
	    android:text="@string/button_learning" />

</RelativeLayout>